[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-plugin-elmer"
version = "0.1.0"
description = "Elmer FEM driver for sim."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Weiqi Ji", email = "jiweiqi10@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "sim-cli-core>=0.3",
    # TODO(reviewer): pin the elmer SDK here, e.g. "elmer>=X.Y"
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "build>=1.0",
]

[project.entry-points."sim.drivers"]
elmer = "sim_plugin_elmer:ElmerDriver"

[project.entry-points."sim.skills"]
elmer = "sim_plugin_elmer:skills_dir"

[project.entry-points."sim.plugins"]
elmer = "sim_plugin_elmer:plugin_info"

[project.urls]
Homepage = "https://github.com/svd-ai-lab/sim-plugin-elmer"
Issues = "https://github.com/svd-ai-lab/sim-plugin-elmer/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/sim_plugin_elmer"]
